# agentix-lib

./: README.md  pyproject.toml
agentix/: __init__.py  agent.py  agent_repository.py  config.py  context.py  llm.py  models.py  repo_protocol.py  stack.py  summarizer.py  view.py
agentix/prompts/: summarization.py
agentix/stack/: __init__.py  frames.py  manager.py  view.py
agentix/storage/: __init__.py  mongo_repository.py
agentix/storage/mongo/: __init__.py  repo.py
agentix/tools/: __init__.py  litellm_formatter.py  tool_parser.py
agentix/utils/: __init__.py  collections.py  console.py  serializer.py
examples/real-estate/: __index__.py  console.py  repo.py  router.py
examples/real-estate/views/: client_select.py  index.py  property_create.py  property_delete.py  property_edit.py  property_list.py
