[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentix"
version = "0.1.0"
description = "Framework minimalista para agentes LLM con vistas, stack y memoria"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Tu Nombre" }]
keywords = ["LLM", "agents", "pydantic", "litellm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

dependencies = [
  "pydantic>=2.6",
  "litellm>=1.43",
  "langfuse>=3.3.4",
  "opentelemetry-api>=1.37.0",
  "opentelemetry-sdk>=1.37.0",
  "opentelemetry-exporter-otlp>=1.37.0",
]

[project.optional-dependencies]
mongo = ["pymongo>=4.6"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/tu-org/agentix"
Issues = "https://github.com/tu-org/agentix/issues"

[tool.setuptools.package-data]
agentix = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentix*"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]

[tool.mypy]
python_version = "3.10"
strict = true
